--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 Django==1.6.2
 Fabric==1.8.2
 South==0.8.4
+django-extensions==1.3.3
 ecdsa==0.11
 paramiko==1.13.0
 pycrypto==2.6.1
+six==1.6.1
 wsgiref==0.1.2
