--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Django==1.6.2
 Fabric==1.8.2
 South==0.8.4
 django-extensions==1.3.3
+django-grappelli==2.5.1
 ecdsa==0.11
 paramiko==1.13.0
 pycrypto==2.6.1
