--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-Django==1.6.2
+-e git://github.com/django/django.git@1.7a2#egg=django
 Fabric==1.8.2
-South==0.8.4
 django-extensions==1.3.3
 django-grappelli==2.5.1
 ecdsa==0.11
