--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
--e git://github.com/django/django.git@1.7a2#egg=django
+-e git://github.com/django/django.git@43510cffcbf64e73232da1d6209151c7232fd2b6#egg=Django-dev
 Fabric==1.8.2
-django-extensions==1.3.3
 django-bootstrap3==2.5.6
+django-extensions==1.3.3
+django-viewsets==0.1.7
 ecdsa==0.11
 paramiko==1.13.0
 pycrypto==2.6.1
