--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
--e git://github.com/django/django.git@43510cffcbf64e73232da1d6209151c7232fd2b6#egg=Django-dev
+-e git://github.com/django/django.git@1.7a2#egg=django
 Fabric==1.8.2
 django-bootstrap3==2.5.6
 django-extensions==1.3.3
