--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
--e git://github.com/django/django.git@1.7a2#egg=django
+-e git://github.com/django/django.git@1.7b1#egg=django
 Fabric==1.8.2
 django-bootstrap3==2.5.6
 django-extensions==1.3.3
