--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
--e git://github.com/django/django.git@1.7b1#egg=django
+Django==1.7b1
 Fabric==1.8.2
+Jinja2==2.7.2
+MarkupSafe==0.19
+Pygments==1.6
+Sphinx==1.2.2
 django-bootstrap3==2.5.6
 django-extensions==1.3.3
 django-viewsets==0.1.7
+docutils==0.11
 ecdsa==0.11
 paramiko==1.13.0
 pycrypto==2.6.1
