--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,12 @@ Pygments==1.6
 Sphinx==1.2.2
 django-bootstrap3==2.5.6
 django-extensions==1.3.3
+django-redis==3.5.2
 django-viewsets==0.1.7
 docutils==0.11
 ecdsa==0.11
 paramiko==1.13.0
 pycrypto==2.6.1
+redis=2.9.1
 six==1.6.1
 wsgiref==0.1.2
