--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Pygments==1.6
 Sphinx==1.2.2
 django-bootstrap3==2.5.6
 django-extensions==1.3.3
+django-guardian==1.2.0
 django-redis==3.5.2
 django-viewsets==0.1.7
 docutils==0.11
