--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ django-bootstrap3==2.5.6
 django-extensions==1.3.3
 django-guardian==1.2.0
 django-redis==3.5.2
+django-reversion==1.8.0
 django-viewsets==0.1.7
 docutils==0.11
 ecdsa==0.11
