--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ Sphinx==1.2.2
 django-bootstrap3==2.5.6
 django-extensions==1.3.3
 django-guardian==1.2.0
+django-mptt==0.6.0
 django-redis==3.5.2
 django-reversion==1.8.0
 django-viewsets==0.1.7
