--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,11 @@ MarkupSafe==0.19
 Pygments==1.6
 Sphinx==1.2.2
 django-bootstrap3==2.5.6
+django-codemirror-widget==0.3.0
 django-extensions==1.3.3
 django-guardian==1.2.0
 django-mptt==0.6.0
+django-picklefield==0.3.1
 django-redis==3.5.2
 django-reversion==1.8.0
 django-viewsets==0.1.7
