--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ django-mptt==0.6.0
 django-picklefield==0.3.1
 django-redis==3.5.2
 django-reversion==1.8.0
+django-tables2==0.15.0
 django-viewsets==0.1.7
 docutils==0.11
 ecdsa==0.11
