--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
--e git://github.com/django/django.git@1.7b1#egg=django
+Django==1.6.5
 Fabric==1.8.2
 Jinja2==2.7.2
 MarkupSafe==0.19
@@ -8,7 +8,7 @@ django-bootstrap3==2.5.6
 django-codemirror-widget==0.3.0
 django-extensions==1.3.3
 django-guardian==1.2.0
-django-mptt==0.6.0
+django-mptt==0.6.1
 django-picklefield==0.3.1
 django-redis==3.5.2
 django-reversion==1.8.0
@@ -21,3 +21,4 @@ pycrypto==2.6.1
 redis==2.9.1
 six==1.6.1
 wsgiref==0.1.2
+South==0.8.4
